welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:-6: error: Missing closing brace `}' assumed here
try {
^dateFashion:1: error: expected class or object definition
def dateFashion(you:Int, date:Int):Int = {if ((you<3)||(date<3)) {return 0}
^